Snackbars are often not wide enough to be readable Fixes #37

--- a/Angular/src/app/app.component.scss
+++ b/Angular/src/app/app.component.scss
@@ -45,10 +45,6 @@ div {
     font-size: 13px;
 }
 
-span {
-    width: 2em;
-}
-
 span.mat-button-focus-overlay {
     width: inherit;
 }
